fix label z-index

--- a/assets/sass/_common-mypage.scss
+++ b/assets/sass/_common-mypage.scss
@@ -757,6 +757,7 @@
                                 color: #fff;
                                 padding-left: 10px;
                                 padding-right: 10px;
+                                z-index: 10;
                                 &::after {
                                     content: 'NEW';
                                 }
